syntax = "proto3";

package pb.common;

option go_package = "/common/pb";

message InscribeBaseContent {
    string inscription_id = 1;
    uint64 inscription_address = 2;
    int32 block_height = 3;
    int64 block_time = 4;
    bytes content_type = 5;
    bytes content = 6;
    uint64 content_id = 7;
    bytes meta_protocol = 8;
    bytes meta_data = 9;
    bytes content_encoding = 10;
    string parent = 11;
    string delegate = 12;
    int64 id = 13;          // nftId
    int64 sat = 14;         // ordinal
    uint64 output = 15;     // inscribing output
    int64 outpoint = 16;    // offset in output when inscribing
    int32 curse_type = 17;
    string typeName = 18;
    bytes user_data = 19;
}

message NftsInSat {
    int64 sat = 1;
    uint64 owner_address_id = 2;
    uint64 utxo_id = 3;
    int64  offset = 4;
    int32 curseCount = 5;
    repeated InscribeBaseContent nfts = 6;
}